2023-06-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-expand-args): Use `tramp-compat-take'.

	* tramp-container.el (tramp-kubernetes--context-namespace):
	Adapt dpcstring.
	(tramp-kubernetes-connection-local-default-profile)
	(tramp-kubernetes-connection-local-default-variables)
	(tramp-flatpak-connection-local-default-profile)
	(tramp-flatpak-connection-local-default-variables): Rename.

2023-06-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fuse.el (tramp-fuse-mounted-p): The mount-spec could
	contain an optional trailing slash.  (Bug#64278)

	* tramp-rclone.el (tramp-rclone-handle-file-system-info):
	Check return code of command.

2023-06-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-buffer-string): Check, that BUFFER is really
	a bufferp.

2023-06-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Adapt docstring.
	(tramp-extra-expand-args): New defvar.
	(tramp-expand-args): Use it.

	* tramp-container.el (tramp-kubernetes-context)
	(tramp-kubernetes-namespace): New defcustoms.
	(tramp-kubernetes--completion-function): Extend for CONTAINER.POD
	syntax.
	(tramp-kubernetes--host-name-regexp): New defconst.
	(tramp-kubernetes--container, tramp-kubernetes--pod)
	(tramp-kubernetes--current-context): New defuns.
	(tramp-kubernetes--current-context-data): Simplify.
	(tramp-kubernetes--context-namespace): New defun.
	(tramp-methods) <kubernetes>: Respect container, context and
	namespace.  (Bug#59797)
	(tramp-container-connection-local-default-kubernetes-variables):
	New defconst.  Set respective connection-local variables.

	* tramp-sh.el (tramp-config-check): New variable.
	(tramp-open-connection-setup-interactive-shell): Use it.

2023-06-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-prefix-format, tramp-prefix-regexp)
	(tramp-method-regexp, tramp-postfix-method-format)
	(tramp-postfix-method-regexp, tramp-prefix-ipv6-format)