@@ -1,4 +1,11 @@
+2023-07-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file):
+	* tramp-rclone.el (tramp-rclone-do-copy-or-rename-file):
+	Improve stability for WebDAV.
+
 2023-06-28  Michael Albinus  <michael.albinus@gmx.de>
+2023-06-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-expand-args): Use `tramp-compat-take'.
 
